--- a/SwiftStocks/Base.lproj/Main.storyboard
+++ b/SwiftStocks/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="45"/>
                                 <color key="backgroundColor" red="0.38431376220000002" green="0.85882359740000003" blue="0.4274510145" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="R1m-zp-xCN"/>
+                                    <constraint firstAttribute="height" constant="45" id="rzc-Di-eo3"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dZr-Yg-QrC">
@@ -34,24 +34,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="dZr-Yg-QrC" secondAttribute="trailing" id="2TJ-h6-voG"/>
-                            <constraint firstItem="dZr-Yg-QrC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9cm-D2-cIN"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dZr-Yg-QrC" secondAttribute="bottom" id="HKX-TQ-7Ne"/>
-                            <constraint firstItem="Ynk-l2-kTe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="J1F-3p-lcu"/>
-                            <constraint firstItem="Ynk-l2-kTe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Lck-49-dPb"/>
-                            <constraint firstAttribute="trailing" secondItem="Ynk-l2-kTe" secondAttribute="trailing" id="dHN-ls-1Ys"/>
-                            <constraint firstItem="dZr-Yg-QrC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="45" id="lnh-DI-mHq"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dZr-Yg-QrC" secondAttribute="bottom" id="o13-Ha-QKh"/>
-                            <constraint firstItem="dZr-Yg-QrC" firstAttribute="top" secondItem="Ynk-l2-kTe" secondAttribute="bottom" id="q5f-dU-pqJ"/>
+                            <constraint firstItem="dZr-Yg-QrC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="CNy-iL-7b7"/>
+                            <constraint firstItem="Ynk-l2-kTe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="SyR-Vq-I48"/>
+                            <constraint firstAttribute="trailing" secondItem="Ynk-l2-kTe" secondAttribute="trailing" id="Xi7-wL-rrF"/>
+                            <constraint firstAttribute="trailing" secondItem="dZr-Yg-QrC" secondAttribute="trailing" id="ce1-LH-f1z"/>
+                            <constraint firstItem="dZr-Yg-QrC" firstAttribute="top" secondItem="Ynk-l2-kTe" secondAttribute="bottom" id="i5J-Qh-AAk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dZr-Yg-QrC" secondAttribute="bottom" id="kYP-OR-I3Z"/>
+                            <constraint firstItem="Ynk-l2-kTe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uQq-79-5vJ"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="tableView" destination="dZr-Yg-QrC" id="lta-UU-dTs"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="399" y="246"/>
+            <point key="canvasLocation" x="359" y="368"/>
         </scene>
     </scenes>
 </document>
